  (Vincent Laviron, review by Gabriel Scherer and Xavier Leroy)

- #10864, #10888: restore afl-fuzz mode for sequential programs.
  (Jan Midtgaard, review by Xavier Leroy and Gabriel Scherer)

- #11008, #11047: rework GC statistics in the Multicore runtime
  (Gabriel Scherer, review by Enguerrand Decorne)

- #11058: basic debugging documentation in runtime/HACKING.adoc
  (Gabriel Scherer, review by ???)

- #11199: Stop installing topdirs.cmi twice. The toplevel now reads topdirs.cmi
  from +compiler-libs, as the debugger does.
  (David Allsopp, review by Sébastien Hinderer)

- #11007: META files for the stdlib, compiler-libs and other libraries (unix,
  dynlink, str, runtime_events, threads, ocamldoc) are now installed along with
  the compiler.
  (David Allsopp, Florian Angeletti, Nicolás Ojeda Bär and Sébastien Hinderer,
   review by Daniel Bünzli, Kate Deplaix, Anil Madhavapeddy and Gabriel Scherer)

### Build system:

* #10893: Remove configuration options --disable-force-safe-string and
  DEFAULT_STRING=unsafe as well as --enable-force-safe-string and
  DEFAULT_STRING=safe which are now the default unconditionally.
  (Kate Deplaix, review by Gabriel Scherer and David Allsopp)

- #11092: Build native-code compilers on OpenBSD/aarch64.
  (Christopher Zimmermann, review by Anil Madhavapeddy)

- #11126: Build system: make it possible to choose which ocamldep
  (and flags) to use when computing depencies for the compiler.
  Add a -no-slash option to ocamldep to let users override -slash.
  (Sébastien Hinderer, review by David Allsopp)

- #11147: Factorize the stdlib-related compilation flags. Make it
  possible to control them consistently through the STDLIBFLAGS
  build variable. Make sure ocamldoc and ocamllex get compiled and
  linked with debugging informations (-g).
  (Sébastien Hinderer, review by Gabriel Scherer)

- #11149: Make the bootstrap process reproducible on systems with non-big-endian